@@ -1,6 +1,6 @@
 <?php
 
-namespace Drupal\Tests\search_api_db_defaults;
+namespace Drupal\Tests\search_api_db_defaults\Functional;
 
 use Drupal\comment\Tests\CommentTestTrait;
 use Drupal\Core\StringTranslation\StringTranslationTrait;
@@ -57,21 +57,27 @@ class IntegrationTest extends SearchApiBrowserTestBase {
   public function testInstallAndDefaultSetupWorking() {
     $this->drupalLogin($this->adminUser);
 
+    // Installation invokes a batch and this breaks it.
+    \Drupal::state()->set('search_api_use_tracking_batch', FALSE);
+
     // Install the search_api_db_defaults module.
-    $edit_enable = [
-      'modules[Search][search_api_db_defaults][enable]' => TRUE,
-    ];
+    if (version_compare(\Drupal::VERSION, '8.3', '>=')){
+      $edit_enable = [
+        'modules[search_api_db_defaults][enable]' => TRUE,
+      ];
+    }
+    else {
+      $edit_enable = [
+        'modules[Search][search_api_db_defaults][enable]' => TRUE,
+      ];
+    }
     $this->drupalPostForm('admin/modules', $edit_enable, t('Install'));
 
     $this->assertSession()->pageTextContains(t('Some required modules must be enabled'));
 
     $this->drupalPostForm(NULL, [], t('Continue'));
-    $args = [
-      '@count' => 3,
-      '%names' => 'Database Search Defaults, Database Search, Search API',
-    ];
-    $success_text = strip_tags(t('@count modules have been enabled: %names.', $args));
-    $this->assertSession()->pageTextContains($success_text);
+
+    $this->assertSession()->pageTextContains('2 modules have been enabled: Database Search Defaults, Database Search');
 
     $this->rebuildContainer();
 
